--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "d3": "^4.7.4",
+    "d3-ng2-service": "^1.8.0",
     "ng2-bootstrap": "^1.6.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
