--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "d3": "^4.7.4",
     "d3-ng2-service": "^1.8.0",
     "ng2-bootstrap": "^1.6.1",
+    "ngx-popover": "0.0.16",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
